--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
    <head>
       <meta charset="UTF-8">
-      <title>Lillian's Portfolio</title>
+      <title>IDM241-mar528-ALPHA</title>
       <link rel="stylesheet" href="assets\css\main.css">
       <link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans&display=swap" rel="stylesheet">
       <script src="assets/js/main.js"></script>
@@ -10,7 +10,32 @@
    </head>
 
    <body>
-      <div class="content">Test
+      <div class="content">
+         <h2>IDM241-mar528-ALPHA, Lillian Raphael</h2>
+         <h2>URL</h2>
+            <p>https://learn.dcollege.net/ultra/course</p>
+         <h2>ABOUT</h2>
+            <p>The microinteraction I want to improve is the navigation sidebar when the user is viewing a course’s content in BBlearn. </p>
+         <h2>TRIGGERS</h2>
+            <p>In the “Courses” page, the user clicks on any of their registered courses. The course’s content then slides in from the right, and on the left there lies the navigation sidebar that I want to improve.
+               If the user hovers their mouse to the right of the navigation sidebar, a hide/show toggle button appears, which when clicked hides/shows the navigation sidebar.
+            </p>
+         <h2>RULES</h2>
+            <p>The hide/show toggle button is always visible.
+               If the navigation menu is hidden, and the user clicks the hide/show button, the navigation menu slides in from the left into view.
+               If the navigation menu is shown, and the user clicks the hide/show button, the navigation menu slides out from the view.
+               The hide/show button has an arrow icon pointing right if the navigation menu is hidden, pointing left if the navigation menu is shown.
+               There is a hover effect for the hide/show button. On hover the icon is highlighted.
+               The current section the user is viewing has a strong background highlight in the navigation menu, and the text is shifted left 10 px.
+               When the user hovers over other sections in the navigation menu, there is a weak background highlight, and the text is shifted left 10 px.
+               </p>
+         <h2>FEEDBACK</h2>
+            <p>In the navigation menu, the user will see the background color fade into a lighter tone and will see the text shift left 10 pixels when they hover over different sections, these changes quickly revert when they hover section from section.</p>
+         <h2>LOOPS AND MODES</h2>
+            <p>none</p>
+         <h2>IMAGES</h2>
+         <p>Example 1: When the user is on assignments page, assignments is highlighted.</p>
+         <img src="assets/img/example.PNG" class="w3-round" alt="Norway">
       </div>   
     </body>
 </html>
